fix: fix header on smaller screens

--- a/src/app/_components/Navbar/index.module.scss
+++ b/src/app/_components/Navbar/index.module.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   max-width: 100dvw;
   color: white;
-  padding: 20px 80px 0 20px;
+  padding: 20px 40px 0 20px;
 
   div {
     display: flex;
@@ -14,6 +14,12 @@
     filter: drop-shadow(2px 2px 6px #000000);
     cursor: pointer;
   }
+
+  a {
+    white-space: nowrap;
+  }
+
+  column-gap: 5px;
 }
 
 @media (max-width: 1024px) {
